--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.58.0",
+    "react-native-audio-polyfill": "^1.1.7",
+    "react-native-sound": "^0.10.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
   },
